--- a/GiveCamp/Views/Shared/_Layout.cshtml
+++ b/GiveCamp/Views/Shared/_Layout.cshtml
@@ -1,48 +1,69 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    @Styles.Render("~/Content/bootstrap")
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+</head>
+<body>
+
+    <div class="container">
+
+        <div class="masthead">
+            <h3 class="muted">Dallas GiveCamp</h3>
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <div class="container">
+                        <ul class="nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Location</a></li>
+                            <li><a href="#">Schedule</a></li>
+                            <li><a href="#">Sponsors</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li>@Html.Partial("_LoginPartial")</li>
                         </ul>
-                    </nav>
+                    </div>
                 </div>
             </div>
-        </header>
-        <div id="body">
+            <!-- /.navbar -->
+        </div>
+
+<div class="row">
+ <div class="span10">    <div id="body">
             @RenderSection("featured", required: false)
+            @if (IsSectionDefined("featured"))
+            {
+                  <hr />
+            }
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
             </section>
         </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
-            </div>
-        </footer>
+</div>
+  <div class="span2">
+      @Html.Partial("_Sidebar")
+  </div>
+</div>
 
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
-    </body>
+
+    
+        <hr>
+
+        <div class="footer">
+            <p>&copy; Dallas GiveCamp 2013</p>
+        </div>
+
+    </div>
+
+
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+</body>
 </html>
