--- a/GiveCamp/Views/Shared/_Layout.cshtml
+++ b/GiveCamp/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <title>@ViewBag.Title - Dallas GiveCamp</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/bootstrap")
@@ -10,22 +10,23 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-
     <div class="container">
-
         <div class="masthead">
-            <h3 class="muted">Dallas GiveCamp</h3>
+            <div>
+                <a href="@Url.Action("Index", "Home")">
+                    <img src="~/Images/GiveCampDallas_small.png" alt="Dallas GiveCamp" /></a>
+            </div>
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
+                            @Html.MenuLink("Home","Index","Home")
                             <li><a href="#">News</a></li>
                             <li><a href="#">Location</a></li>
                             <li><a href="#">Schedule</a></li>
                             <li><a href="#">Sponsors</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li>@Html.Partial("_LoginPartial")</li>
+                            @Html.MenuLink("Contact","Contact","Home")
+                            @Html.Partial("_LoginPartial")
                         </ul>
                     </div>
                 </div>
@@ -33,34 +34,28 @@
             <!-- /.navbar -->
         </div>
 
-<div class="row">
- <div class="span10">    <div id="body">
-            @RenderSection("featured", required: false)
-            @if (IsSectionDefined("featured"))
-            {
-                  <hr />
-            }
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+        <div class="row">
+            <div class="span10">
+                <div id="body">
+                    @RenderSection("featured", required: false)
+                    @if (IsSectionDefined("featured"))
+                    {
+                        <hr />
+                    }
+                    <section class="content-wrapper main-content clear-fix">
+                        @RenderBody()
+                    </section>
+                </div>
+            </div>
+            <div class="span2">
+                @Html.Partial("_Sidebar")
+            </div>
         </div>
-</div>
-  <div class="span2">
-      @Html.Partial("_Sidebar")
-  </div>
-</div>
-
-
-    
         <hr>
-
         <div class="footer">
             <p>&copy; Dallas GiveCamp 2013</p>
         </div>
-
     </div>
-
-
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
