--- a/GiveCamp/Views/Home/Index.cshtml
+++ b/GiveCamp/Views/Home/Index.cshtml
@@ -1,34 +1,58 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-@section featured {
-    <div class="jumbotron">
-        <h1>What is GiveCamp?</h1>
-        <p class="lead">GiveCamp is a weekend-long event where software developers, designers, database administrators and project managers donate their time to create custom software for non-profit organizations. This custom software could be a new website for the nonprofit organization, a small data-collection application to keep track of members, or a application for the Red Cross that automatically emails a blood donor three months after they’ve donated blood to remind them that they are now eligible to donate again. The only limitation is that the project should be scoped to be able to be completed in a weekend.</p>
-        <p class="lead">At GiveCamp last year, in one weekend we were able to donate over 1/2 a million dollars worth of development time to over a dozen local charities.</p>
+
+<div id="myCarousel" class="carousel slide">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+        <div class="item well active">
+            <h2>Are you a Developer or Designer?</h2>
+            <p class="lead">Do you have code/design skills? Do you have a free weekend? Do you want to participate in one of the most rewarding events around? We need your help!</p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+        </div>
+        <div class="item well">
+            <h2>Are you a Project Manager or Business Analyst?</h2>
+            <p class="lead">Do you have project management or business analyst experiance? Do you want to help lead a charity through the GiveCamp process?  We need your help!</p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+        </div>
+        <div class="item well">
+            <h2>Do you run a Charity or Non-Profit?</h2>
+            <p class="lead">Are you a non-profit that works to support the Dallas/Ft. Worth community? Do you need an updated web presence or other development project? We want to help you!</p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+        </div>
+        <div class="item well">
+            <h2>Can you help in another way?</h2>
+            <p class="lead">Do you believe in our mission? Do you want to reach the most influential folks in the Dallas IT community? We need your help!</p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+        </div>
     </div>
-}
-<div class="row-fluid">
-    <div class="span6 well">
-        <h2>Developer or Designer</h2>
-        <p class="lead">Do you have code/design skills? Do you have a free weekend? Do you want to participate in one of the most rewarding events around? We need your help!</p>
-        <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
-    </div>
-    <div class="span6 well">
-        <h2>Project Manager or Business Analyst</h2>
-        <p class="lead">Do you have project management or business analyst experiance? Do you want to help lead a charity through the GiveCamp process?  We need your help!</p>
-        <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
-    </div>
-    </div>
-<div class="row-fluid">
-    <div class="span6 well">
-        <h2>Charity</h2>
-        <p class="lead">Are you a non-profit that works to support the Dallas/Ft. Worth community? Do you need an updated web presence or other development project? We want to help you!</p>
-        <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
-    </div>
-    <div class="span6 well">
-        <h2>Supporter</h2>
-        <p class="lead">Do you believe in our mission? Do you want to reach the most influential folks in the Dallas IT community? We need your help!</p>
-        <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
-    </div>
+    <!-- Carousel nav 
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>-->
 </div>
+
+<div style="float:right;">
+    <iframe src="http://player.vimeo.com/video/8474638?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+</div>
+
+<div class="jumbotron">
+    <h1>What is GiveCamp?</h1>
+    <p class="lead">GiveCamp is a weekend-long event where software developers, designers, database administrators and project managers donate their time to create custom software for non-profit organizations. This custom software could be a new website for the nonprofit organization, a small data-collection application to keep track of members, or a application for the Red Cross that automatically emails a blood donor three months after they’ve donated blood to remind them that they are now eligible to donate again. The only limitation is that the project should be scoped to be able to be completed in a weekend.</p>
+    <p class="lead">At GiveCamp last year, in one weekend we were able to donate over 1/2 a million dollars worth of development time to over a dozen local charities.</p>
+</div>
+
+@section scripts {
+<script>
+    $(function () {
+        $('.carousel').carousel({
+            interval: 5000
+        }).carousel('cycle');
+    });
+</script>    
+}
