changed to use simplycountable vs custom js

--- a/GiveCamp/Content/Site.css
+++ b/GiveCamp/Content/Site.css
@@ -9,3 +9,10 @@
 .carousel-indicators li {
     background-color: #fff;
 }
+
+.text-success {
+    font-weight: bold;
+}
+.text-error {
+    font-weight: bold;
+}
