--- a/GiveCamp/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/GiveCamp/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -13,11 +13,11 @@ else
     {
     @Html.AntiForgeryToken()
     <fieldset id="socialLoginList">
-        <legend>Log in using another service</legend>
+        <legend>Log in using a service</legend>
         <p>
         @foreach (AuthenticationClientData p in Model)
         {
-            <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
+            <button type="submit" name="provider" class="btn btn-success btn-large" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
         }
         </p>
     </fieldset>
