--- a/GiveCamp/Views/Volunteer/RoleInfo.cshtml
+++ b/GiveCamp/Views/Volunteer/RoleInfo.cshtml
@@ -4,7 +4,7 @@
 
 <h2>RoleInfo</h2>
 
-<a class="btn btn-success btn-large" href="@Url.Action("Create", "Volunteer")">Volunteer Now!</a>
+<a class="btn btn-success btn-large" href="@Url.Action("Details", "Volunteer")">Volunteer Now!</a>
 
 <p>put information here about all the roles </p>
 
