--- a/GiveCamp/Views/Shared/_Layout.cshtml
+++ b/GiveCamp/Views/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
                         { 
                             <div class="alert alert-success">
                                 @ViewBag.AlertSuccess
+                                <a class="close" data-dismiss="alert" href="#">&times;</a>
                             </div>
                         }
                         @RenderBody()
