added charity reg form

--- a/GiveCamp/Views/Home/Index.cshtml
+++ b/GiveCamp/Views/Home/Index.cshtml
@@ -24,12 +24,12 @@
         <div class="item well">
             <h2>Do you run a Charity or Non-Profit?</h2>
             <p class="lead">Are you a non-profit that works to support the Dallas/Ft. Worth community? Do you need an updated web presence or other development project? We want to help you!</p>
-            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="@Url.Action("RoleInfo", "Charity")">More Info</a></p>
         </div>
         <div class="item well">
             <h2>Can you help in another way?</h2>
             <p class="lead">Do you believe in our mission? Do you want to reach the most influential folks in the Dallas IT community? We need your help!</p>
-            <p class="text-right"><a class="btn btn-success btn-large" href="#">More Info</a></p>
+            <p class="text-right"><a class="btn btn-success btn-large" href="@Url.Action("SponsorInfo", "Home")">More Info</a></p>
         </div>
     </div>
     <!-- Carousel nav 
