--- a/GiveCamp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/GiveCamp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -27,7 +27,7 @@
             </li>
         </ol>
         @Html.HiddenFor(m => m.ExternalLoginData)
-        <input type="submit" value="Register" />
+        <input type="submit" value="Register" class="btn btn-success btn-large" />
     </fieldset>
 }
 
