added some instructions to the site

--- a/GiveCamp/Views/Charity/RoleInfo.cshtml
+++ b/GiveCamp/Views/Charity/RoleInfo.cshtml
@@ -5,15 +5,13 @@
 <h2>Charity Application Process</h2>
 
 <h3>Please read then apply below to have your project considered for Dallas GiveCamp</h3>
-<br />
-<br />
-<h3>Applications are Due by Wed Aug 1</h3>
-<br />
-<br />
-A GiveCamp is a weekend-long event where software developers, designers, and database administrators donate their time to create custom software for non-profit organizations. This custom software could be a new website for the nonprofit organization, a small data-collection application to keep track of members, or an application for the Red Cross that automatically emails a blood donor three months after they’ve donated blood to remind them that they are now eligible to donate again. 
-<strong>The only limitation is that the project should be scoped to be able to be completed in a weekend.</strong> If you don’t know if your idea can be completed in a weekend, give us as many details as you can in the form below.<br />
-<br />
-Success for each charity depends on a couple of things, but all starts with involvement. It's critical that members of the charity be available before, during and after the event to ensure that your development team is successful. If your organization is selected, the following requirements are made: 
+<h3>Applications are Due by Thursday Aug 1</h3>
+<p>
+    A GiveCamp is a weekend-long event where software developers, designers, project managers and business analysts donate their time to create custom software for non-profit organizations. This custom software could be a new website for your nonprofit organization, a small data-collection application to keep track of members, or an application that sends out reminder emails. <strong>The only limitation is that the project should be scoped to be able to be completed in a weekend.</strong> If you don’t know if your idea can be completed in a weekend, give us as many details as you can in the form below and we will review them.
+</p>
+<p>
+    Success for each charity depends on a couple of things, but all starts with involvement. It's critical that members of the charity be available before, during and after the event to ensure that your development team is successful. If your organization is selected, the following requirements are made: 
+</p>
 <ul>
     <li>a representative from your charity must attend the kick-off meeting on 
 	Friday afternoon. This person should be knowledgeable about the proposal 
@@ -22,22 +20,16 @@ Success for each charity depends on a couple of things, but all starts with invo
 	in person or by phone during the weekend so that any questions about the 
 	website can be answered and the team has the information they need to 
 	complete their assigned tasks </li>
-    <li>Members of your organization that will be maintaining the site after the 
-	event is over are encouraged to attend one of the various training sessions 
-	that will be conducted during the weekend. These sessions will include 
-	training on the various technical solutions used to build the applications 
-	as well as sessions on various Social Media techniques to expand the impact 
-	of your organization online.</li>
-    <li>lastly, at least one member of the Charity must attend the demo on Sunday afternoon to see the results and take possession of the updated website code. The person who attends the demo should be your organization's technical expert.</li>
+    <li>lastly, at least one member of the Charity must attend the demo on Sunday afternoon to see the results and take possession of the updated website code.</li>
 </ul>
-It goes without saying that the most successful charity projects result from a strong commitment to participate by members of the charity, so you're strongly encouraged to be on site each day. 
-<br />
-<br />
-If you already have your own hardware or a hosting provider, you will be provided with instructions on how to deploy your new application. If not, we are asking for sponsorship from local and national hosting providers to provide hosting for free or at a discounted rate.<br />
-<br />
-We will select the number of charities to be helped based on the number of developer volunteers we receive. Our goal is to provide support to 13 charities in the local DFW area.
+<p>It goes without saying that the most successful charity projects result from a strong commitment to participate by members of the charity, so you're strongly encouraged to be on site each day. </p>
+<p>
+    If you already have your own hardware or a hosting provider, you will be provided with instructions on how to deploy your new application. If not, we are asking for sponsorship from local and national hosting providers to provide hosting for free or at a discounted rate.
+</p>
+<p>
+    We will select the number of charities to be helped based on the number of developer volunteers we receive. Our goal is to provide support to 13 charities in the local DFW area.
 If you are one of the charities that are selected, a GiveCamp business analyst will contact you to finalize your design requirements.
-<strong>The selected charities will be published to the GiveCamp website on Aug 6th. Selected charities will also be emailed to confirm their participation and an additional meeting with the assigned Business Analyst will be set up.</strong>
-<br />
-<br />
+    <strong>The selected charities will be published to the GiveCamp website on Aug 19th. Selected charities will also be emailed to confirm their participation and an additional meeting with the assigned Business Analyst will be set up.</strong>
+</p>
+<p>Press the “Apply Now” button below to submit or update your application.</p>
 <a class="btn btn-success btn-large" href="@Url.Action("Details", "Charity")">Apply Now!</a>
