--- a/GiveCamp/Views/Volunteer/RoleInfo.cshtml
+++ b/GiveCamp/Views/Volunteer/RoleInfo.cshtml
@@ -2,9 +2,22 @@
     ViewBag.Title = "RoleInfo";
 }
 
-<h2>RoleInfo</h2>
+<h2>Volunteer</h2>
+
+<p>
+    So you are interested in volunteering at Dallas GiveCamp. Let me start by thanking your for your interest, Dallas GiveCamp would not be possible without all the support of the volunteers.
+</p>
+<p>
+    <strong>Developers and Designers</strong> are responsible for implementing the charities requirements during the event weekend. During the event weekend, you will work with a team of five to seven folks. If you have a group you would like to work with be sure to all put the same “team name” when you register. If you don’t have a group you would like to work with, don’t worry, we will put you on a team.
+</p>
+<p>
+    <strong>Project Managers and Business Analysts</strong> are responsible for gathering the charities requirements and leading the team during the event weekend. In the month leading up to the event you will meet with the charity and find out what they need done. You will need ensure that the requirements are “doable” by the team during the event weekend. Additionally you will be responsible to ensure that any setup that the team needs is ready so they can hit the ground running Friday night. During the event weekend, you will need to help the team stay on schedule to ensure project completion on Sunday evening.
+</p>
+<p>
+    Register by clicking the “Volunteer Now” button below. You can change your registration preferences at any time by clicking the button again.  
+</p>
 
 <a class="btn btn-success btn-large" href="@Url.Action("Details", "Volunteer")">Volunteer Now!</a>
 
-<p>put information here about all the roles </p>
+
 
