centered the twitter iframe

--- a/GiveCamp/Views/Shared/_Sidebar.cshtml
+++ b/GiveCamp/Views/Shared/_Sidebar.cshtml
@@ -8,5 +8,7 @@
     <div class="text-center">
         <a class="btn btn-success" href="@Url.Action("SponsorInfo", "Home")">Become a Sponsor</a>
     </div>
-    <iframe src="/twitter.html" height="600" width="200" frameborder="0" />
+    <div class="text-center">
+        <iframe src="/twitter.html" height="600" width="200" frameborder="0" />
+    </div>
 </div>
