first stab at a history page

--- a/GiveCamp/Views/Shared/_Layout.cshtml
+++ b/GiveCamp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             @Html.MenuLink("Schedule", "Schedule", "Home")
                             @Html.MenuLink("Sponsors", "Sponsors", "Home")
                             @Html.MenuLink("Contact", "Contact", "Home")
+                            @Html.MenuLink("History", "History", "Home")
                             @if (Request.IsAuthenticated)
                             {
                                 @Html.MenuLink("Account", "Manage", "Account")
